# ogd_ai-search

./: .gitignore  01_mdv_search.ipynb  README.md  pyproject.toml  requirements.txt
_data/: 01_data.parq
_streamlit/: ai-search.py  utils_projectinfo.md
